contact us page updated

--- a/pages/about.html
+++ b/pages/about.html
@@ -82,7 +82,6 @@
             <div class="container-fluid    p-0">
 
                 <div class="navbar navbar-expand-lg bg-white py-0   >
-
                 
                 <a href=" index.html" class="navbar-brand ml-lg-3 ">
 
@@ -96,7 +95,7 @@
                     <div class="collapse navbar-collapse justify-content-between px-lg-3 " id="navbarCollapse">
                         <div class="navbar-nav mx-auto py-0">
                             <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
-                            <a href="./pages/about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
+                            <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
                             <div class="nav-item dropdown ">
                                 <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size "
                                     data-toggle="dropdown">Services</a>
@@ -109,7 +108,7 @@
                                 </div>
                             </div>
                             <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
-                            <a href="#" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
+                            <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                         </div>
                         <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
                     </div>
