--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,34 +83,33 @@
         <div class="container-fluid    p-0">
 
             <div class="navbar navbar-expand-lg bg-white py-0   >
-
             
             <a href=" index.html" class="navbar-brand ml-lg-3 ">
 
-                <img src="../img/logo.a837e74955c0b8e4a8d6.png  " class="imgm pr-lg-10 d-lg-block logo" width="180px"
-                    alt="">
+                <img src="../img/logo.a837e74955c0b8e4a8d6.png  " class="imgm pr-lg-10 d-lg-block logo"
+                    width="180px" alt="">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+                <div class="collapse navbar-collapse justify-content-between px-lg-3 " id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
-                        <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
+                        <a href="./pages/about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
                         <div class="nav-item dropdown ">
-                            <a href="#" class="nav-link dropdown-toggle a1 active navbar-font-size  " data-toggle="dropdown">Services</a>
+                            <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size "
+                                data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="./artificial-intelligence.html" class="dropdown-item">Artificial
-                                    intelligence</a>
+                                <a href="detail.html" class="dropdown-item">Artificial intelligence</a>
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
                                 <a href="team.html" class="dropdown-item">Instructors</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
                         </div>
-                        <a href="./success-story.html" class="nav-item nav-link a1 navbar-font-size  active">Success Story </a>
-                        <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
+                        <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
+                        <a href="#" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                     </div>
                     <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
                 </div>
@@ -118,48 +117,7 @@
         </div>
 
     </div>
-
-
-
-    <!-- section 3 -->
-
-    <div class="container-fluid success-hero-secrion   ">
-
-        <div class="row bold success-hero-secrion-1 ">
-
-
-            <div>
-                <h1 class="h3  text-center text-light bold "> Success Story</h1>
-                <h2 class="h6  text-center text-light  "> <a href="../index.html" class="light"> Home </a> > Success
-                    Story </h2>
-            </div>
-
-        </div>
-
-
-
-    </div>
-
-    <div class="row about  container container-lg container-fluid justify-content-center ">
-        <div class="col-md-5 col-xl-6 col-xxl-5 col-lg-6 col ">
-            <div class="  text-dark  ">
-                <h2 class=" h4 font-weight-bold">GMITS | THE BEST & TRUSTED IT <br> SOLUTION</h2>
-                <p class="p-3 ">GMITSTECH has earned reputation and respect from its client by delivering top-notch
-                    customized IT solutions. We have satisfied clients from all over the globe and we aim to support our
-                    clientele with best support and services
-                    We believe in making strong connection with our valued business partners and long-lasting relation
-                    with them. We dedicate our success to our Business partners and their belief in us GMITSTECH has
-                    earned the reputation and respect</p>
-
-            </div>
-        </div>
-
-        <div class="col-md-6 col-xl-4 col-xxl-3  col col-lg-5">
-            <div>
-                <img src="../img/success-story-image.ec997ddb5d19919840d7.gif" class="img3  " alt="">
-            </div>
-        </div>
-    </div>
+   
 
 
 
@@ -167,193 +125,12 @@
 
 
 
-    <div class="container-fluid section-8  ">
-        <h1 class="text-center">OUR PORTFOLIO</h1>
-        <h2 class="text-center"> <span class="color-denger">Here is some of our</span> Recent Details</h2>
-
-        <div class="row justify-content-center">
-            <div id="carouselExampleSlidesOnly" class="carousel slide col-8" data-bs-ride="carousel">
-                <div class="carousel-inner ">
-                    <div class="carousel-item active">
-                        <img src="../img/portfolio-8.fcbe08ea10efebc4e494.png" class="d-block   img-fluid img-8"
-                            alt="...">
-                        <h2 class="text-center text-white">Civil Academy</h2>
-                        <p class="text-center text-white">B2B/B2C Web & Mobile App Development</p>
-
-                        <div>
-                            <div class="row">
-                                <div class="col text-center">
-                                    <button type="button" class="btn btn-danger  btn-lg mybutton-1  px-5">View
-                                        Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/portfolio-4.9103f186c7a9fe1045c8.png" class="d-block img-8 img-fluid"
-                            alt="...">
-                        <h2 class="text-center text-white">Civil Academy</h2>
-                        <p class="text-center text-white">B2B/B2C Web & Mobile App Development</p>
-
-                        <div>
-                            <div class="row">
-                                <div class="col text-center">
-                                    <button type="button" class="btn btn-danger  btn-lg mybutton-1  px-5">View
-                                        Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/portfolio-9.23540ff17632ecd7af65.png" class="d-block img-8 img-fluid"
-                            alt="...">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+  
 
 
 
 
-
-    <!-- /* TESTIMONIALS */ -->
-
-    <div class="testimonials-1 container-fluid ">
-        <div class=" row    justify-content-center">
-
-            <div class="col-4  col-lg-4 col-md-6">
-                <h4 class="testimonials1">TESTIMONIALS</h4>
-                <h3 class="span-1"> <span> What Client Say </span> About Us</h3>
-            </div>
-            <div class="col-4 col-lg-4 col-md-6 ">
-
-            </div>
-        </div>
-        <div class="row justify-content-center ">
-            <div class="col-4  col-md-6  col-12 col-lg-4  bg-white ">
-                <div id="carouselExampleSlidesOnly" class="carousel slide  testimonials2" data-bs-ride="carousel">
-                    <div class="carousel-inner ">
-                        <div class="carousel-item active">
-                            <img src="../img/testimonials-profile-4.a362df772f90be344843.jpg" class="d-block div7"
-                                alt="...">
-
-                            <p class="p7"> We needed to atomize and manage the day to day operations of our business
-                                activities. GMITS provided us with the best available and cost-effective cloud
-                                solution
-                                that helped our company in Sales, Accounting, HRMS and much more. One of the best
-                                ERP
-                                solutions with which we have worked.</p>
-                            <h1 class="h7">Dr. Omar H. Salman</h1>
-                            <p>Business Development Manager | Associate Prof | PHD Computer Enginerring | Big Data
-                                Analytics</p>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/download.jfif" class="d-block div7" alt="...">
-                            <p class="p7">ATMS hired GMITS for SEO service, and we were pleasantly surprised to have
-                                our
-                                company on the first page of Google within a matter of one week. The GMITS team is
-                                knowledgeable, responsive and committed to supporting our initiatives. We are
-                                delighted
-                                to have them as our partners.</p>
-                            <h1 class="h7">Mr. Hussain</h1>
-                            <p>Owner of Civil Driving Institute</p>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-
-                        </div>
-                        <div class="carousel-item">
-                            <img src="../img/testimonials-profile-3.125f59173af6a3bc88de.jpg" class="d-block div7"
-                                alt="...">
-                            <p class="p7"> ATMS hired GMITS for SEO service, and we were pleasantly surprised to
-                                have
-                                our company on the first page of Google within a matter of one week. The GMITS team
-                                is
-                                knowledgeable, responsive and committed to supporting our initiatives. We are
-                                delighted
-                                to have them as our partners.</p>
-
-                            <h1 class="h7">Dr. Hemant Kumar</h1>
-                            <p>Co-founder and Managing Director of ATMS</p>
-                            <span class="fa fa-star checked span-1 "></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-4 col- col-lg-4  col-12 col-md-6">
-                <img src="../img/testimonials.98eecf2d2374f1454e71.png" class="img4 img-fluid" alt="">
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-    <!-- Cards 
-
--->
-
-
-    <div class="container-fluid   section-9">
-
-        <div class=" row justify-content-center">
-
-            <div class="col-2 bg-white h-100 sub-section-8  row justify-content-center">
-                <img src="../img/client-3.cf9d244d18434a25a17e.png" class="img-fluid img-responsive w-75" alt="">
-
-            </div>
-            <div class="col-2 bg-white h-100   row justify-content-center sub-section-8">
-                <img src="../img/client-7.78577717e38cd1e4e38d.png" class="img-fluid img-responsive w-75" alt="">
-            </div>
-            <div class="col-2 col-2 bg-white h-100  row justify-content-center sub-section-8 ">
-                <img src="../img/download (1).jfif" class="img-fluid img-responsive w-75" alt="">
-            </div>
-            <div class="col-2 bg-white h-100   row justify-content-center  ">
-                <img src="../img/client-6.69fe93be8e6a3522604b.png" class=" img-fluid  img-responsive w-75" alt="">
-            </div>
-
-        </div>
-
-    </div>
-
-
-
-
-    <div class=" container-fluid section-11     " id="section-5">
-        <div class="row  justify-content-center align-items-custom ">
-            <div class="text-center col-8 text-white ">
-                <h1>GET HANDS ON EXPERIENCE WITH OUR SERVICES</h1>
-                <p>Expand your business by getting hands on experience with our services Experience Life-long
-                    satisfactory results and improve your sales funnel that converts into desired ROI and brings
-                    life to
-                    your business</p>
-                <div class="row">
-                    <div class="col text-center">
-                        <button type="button" class="btn btn-danger   mybutton-2    text-uppercase">get in
-                            touch</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+ 
 
 
 
@@ -589,6 +366,12 @@
 
 
 
+
+
+
+
+
+    
     <div class="container social-icons ">
         <a href="#" class="myid">
             <img src="../img/whatsapp.png" width="45px" alt="">
@@ -612,8 +395,6 @@
 
 
     </div>
-
-
 
 
 
