--- a/pages/artificial-intelligence.html
+++ b/pages/artificial-intelligence.html
@@ -6,53 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="../pages/main.css">
+    <link rel="stylesheet" href="../Styles/main.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="../Styles/about.css">
 
-    <link rel="stylesheet" href="./artificial-intelligence.css">
+    <link rel="stylesheet" href="../Styles/artificial-intelligence.css">
 </head>
 
 <body>
 
-    <div class="cumstome_nav ">
-        <div class="container-fluid bg-color ">
+    
+    <div class="nav-position-fixed ">
+        <div class="container-fluid bg-color  bg-color-1">
             <div class="row py-2 px-lg-5  ">
-                <div class="col-lg-6 col-xl text-center text-lg-left mb-2 mb-lg-0">
+                <div class="col-lg-6 col-xl-6 text-center text-lg-left mb-2 mb-lg-0 ">
                     <div class="d-inline-flex align-items-center text-white">
 
-                        <i class="bi bi-telephone-fill img1" style="font-size:20px"></i>
+                        <i class="bi bi-telephone-fill img1" style="font-size:16px"></i>
                         <h6> +971 4 236 7319</h6>
-                        <small class="px-2 h4 ">|</small>
+                        <small class="px-2 h3 ">|</small>
 
 
-                        <i class="bi bi-envelope img1" style="font-size:20px"></i>
+                        <i class="bi bi-envelope img1" style="font-size:16px"></i>
                         <h6> info@example.com</h6>
 
                     </div>
                 </div>
-                <div class="col-lg-2 col-xl  text-center   text-lg-right ">
+
+                <div class="col-lg-6 col-xl-6  text-center  text-lg-right   ">
+
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-white px-2" href="">
 
 
-                        </a>
-                        <a class="text-white px-2" href="twitter.com/gvanwp" target="_blank">
-                            <i class="bi-whatsapp" style="font-size:25px"></i>
-                        </a>
-                        <a class="text-white px-2" href="">
-                            <i class=" bi-linkedin" style="font-size:24px"></i>
-                        </a>
-                        <a class="text-white px-2" href="">
-                            <i class=" bi-youtube" style="font-size:25px"></i>
-                        </a>
-                        <a class="text-white pl-2" href="">
-                            <i class=" bi-twitter" style="font-size:25px"></i>
+                        <div class="   icon-margin ">
+                            <a class="text-white px-2" href="twitter.com/gvanwp" target="_blank">
+                                <i class="bi-whatsapp icon-margin2" style="font-size:16px"></i>
+                            </a>
+                        </div>
+                        <div class=" icon-margin "> <a class="text-white px-2" href="">
+                                <i class=" bi-linkedin icon-margin3 " style="font-size:14px"></i>
+                            </a>
+                        </div>
+                        <div class="  icon-margin "> <a class="text-white px-2" href="">
+                                <i class=" bi-youtube icon-margin4" style="font-size:16px"></i>
+                            </a>
+                        </div>
+                        <div class="  icon-margin ">
+                            <a class="text-white pl-2" href="">
+                                <i class=" bi-twitter" style="font-size:18px"></i>
+                        </div>
 
+                        <div class="  icon-margin ">
+                            <a class="text-white pl-2" href="">
+                                <i class=" bi-facebook" style="font-size:16px"></i>
+                        </div>
+
+                        <div class=" icon-margin "> <a class="text-white px-2" href="">
+                                <i class=" bi-instagram icon-margin3 " style="font-size:14px"></i>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
@@ -80,19 +96,25 @@
 
                 <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
-                        <a href="../index.html" class="nav-item nav-link active a1 "> Home</a>
-                        <a href="./about.html" class="nav-item active nav-link a1 ">About Us </a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle a1 " data-toggle="dropdown">Services</a>
+                        <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
+                        <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size ">About Us
+                        </a>
+                        <div class="nav-item dropdown ">
+                            <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size"
+                                data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <a href="detail.html" class="dropdown-item">Course Detail</a>
-                                <a href="feature.html" class="dropdown-item">Our Features</a>
-                                <a href="team.html" class="dropdown-item">Instructors</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+
+                                <a href="#" class="dropdown-item ">Artificial
+                                    intelligence</a>
+                                <a href="feature.html" class="dropdown-item ">Our Features</a>
+                                <a href="team.html" class="dropdown-item ">Instructors</a>
+                                <a href="testimonial.html" class="dropdown-item ">Testimonial</a>
                             </div>
                         </div>
-                        <a href="./success-story.html" class="nav-item nav-link a1 ">Success Story </a>
-                        <a href="./contact.html" class="nav-item nav-link a1 ">Contact Us </a>
+                        <a href="./success-story.html"
+                            class="nav-item nav-link a1  active navbar-font-size">Success Story </a>
+                        <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size">Contact
+                            Us </a>
                     </div>
                     <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
                 </div>
