--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu m-0">
 
-                                    <a href="detail.html" class="dropdown-item ">Artificial
+                                    <a href="./pages/artificial-intelligence.html" class="dropdown-item ">Artificial
                                         intelligence</a>
                                     <a href="feature.html" class="dropdown-item ">Our Features</a>
                                     <a href="team.html" class="dropdown-item ">Instructors</a>
@@ -125,7 +125,9 @@
                             <a href="./pages/contact.html" class="nav-item nav-link a1 active navbar-font-size">Contact
                                 Us </a>
                         </div>
-                        <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
+                        <!-- <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a> -->
+                        <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
+                            Quote</button>
                     </div>
                 </div>
             </div>
@@ -138,28 +140,29 @@
 
         <div class="container-fluid      ">
 
-            <div class=" row section-1  ">
+            <div class=" row section-1   container-fluid ">
 
 
-                <div class=" col-xxl-4 col-xl-5 col-lg-5 col-md-6 col-sm-6   div3 ">
+                <div class=" col-xxl-4 col-xl-5 col-lg-5 col-md-4 col-sm-6   div3 ">
                     <h3 class="welcome">
-                        WELCOME TO GMITS TECH _______________
+                        WELCOME TO GMITS TECH <span>  _______________ </span>
                     </h3>
                     <h2 class="welcome2 h1 ">Leading IT Company in <span class="uae"> UAE</span>, <span class="uae">
                             INDONESIA</span> , <span class="uae"> IRAQ</span>, & <span class="uae"> PAKISTAN</span></h2>
-                    <button type="button" class="btn button1  btn-danger ">Get Quote</button>
+                    <!-- <button type="button" class="btn button1  btn-danger ">Get Quote</button> -->
+                    <button class="  butt  button1 text-uppercase " type="submit">Get Quote</button>
 
 
                 </div>
 
-                <div class=" col-xxl-4 col-xl-5 col-lg-5 col-md-6 col-sm-6  ">
-                    <div class="">
-                        <img src="./img/home-section-1-user.png" class=" div2 col-lg-w-75 " alt="">
+
+                <div class=" col-xxl-4 col-xl-5 col-lg-5 col-md-4 col-sm-6  hero-section-bg-image ">
 
 
+                   
+                    <img src="./img/home-section-1-image.png" class="div2  img-fluid" alt="">
 
 
-                    </div>
 
                 </div>
 
@@ -185,7 +188,13 @@
                         2016 by experienced IT professionals, our vision is to get more eyes on your business on various
                         platforms, to help you achieve growth and desired results. We listen, get to know you, and
                         collaborate with you to provide tailor-made solutions.</p>
-                    <button type="button" class="btn btn-outline-danger mybutton ">Lrean More </button>
+                    <!-- <button type="button" class="btn btn-outline-danger mybutton ">Lrean More </button> -->
+                    <div class="mybutton">
+
+                        <button>
+                            LEARN MORE
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -212,7 +221,7 @@
 
 
 
-            <div class="container-lg  custome-height  row    ">
+            <div class="container  custome-height  row    ">
 
                 <div class="row justify-content-center  Services">
                     <div class="col-5"></div>
@@ -291,8 +300,8 @@
                             </div>
 
                         </div>
-                        <div>
-                            <h6 class="text-center ">Mobile App development </h6>
+                        <div class="app-developement">
+                            <h6 class="text-center  bold">Mobile App development </h6>
                             <p class="text-center paragraph">We Develop user-friendly cross platforms custom built
                                 Mobile
                                 Apps using
@@ -317,8 +326,8 @@
                             </div>
 
                         </div>
-                        <div>
-                            <h6 class="text-center ">Mobile App development </h6>
+                        <div class="app-developement">
+                            <h6 class="text-center bold ">Mobile App development </h6>
                             <p class="text-center paragraph">We Develop user-friendly cross platforms custom built
                                 Mobile
                                 Apps using
@@ -343,8 +352,8 @@
                             </div>
 
                         </div>
-                        <div>
-                            <h6 class="text-center ">Website Development</h6>
+                        <div class="app-developement">
+                            <h6 class="text-center  bold ">Website Development</h6>
                             <p class="text-center paragraph">We specialize in custom build B2B & B2C portal, wordpress,
                                 Vuejs, nodejs,
                                 HTML We develop user friendly sites with modern designs.</p>
@@ -368,8 +377,8 @@
                             </div>
 
                         </div>
-                        <div>
-                            <h6 class="text-center ">Mobile App development </h6>
+                        <div class="app-developement">
+                            <h6 class="text-center bold  ">Mobile App development </h6>
                             <p class="text-center paragraph">We specialize in custom build B2B & B2C portal, wordpress,
                                 Vuejs, nodejs,
                                 HTML We develop user friendly sites with modern designs</p>
@@ -392,8 +401,8 @@
                             </div>
 
                         </div>
-                        <div>
-                            <h6 class="text-center  ">Mobile App development </h6>
+                        <div class="app-developement">
+                            <h6 class="text-center  bold ">Mobile App development </h6>
                             <p class="text-center paragraph">We specialize in custom build B2B & B2C portal, wordpress,
                                 Vuejs, nodejs,
                                 HTML We develop user friendly sites with modern designs</p>
@@ -412,8 +421,8 @@
 
                             </div>
                         </div>
-                        <div>
-                            <h6 class="text-center">Mobile App development </h6>
+                        <div class="app-developement">
+                            <h6 class="text-center  bold">Mobile App development </h6>
                             <p class="text-center paragraph">We specialize in custom build B2B & B2C portal, wordpress,
                                 Vuejs, nodejs,
                                 HTML We develop user friendly sites with modern designs</p>
@@ -788,6 +797,19 @@
             <video src=""></video>
         </div>
         </div> -->
+        <div class="CLIENT-TESTIMONIALS">
+            <div class="CLIENT">
+                <h3>CLIENT <span>TESTIMONIALS</span>
+                </h3>
+            </div>
+            <div class="ifarme-vedio">
+                <iframe width="1122" height="530" src="https://www.youtube.com/embed/wcxXvdOZ8X8"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+            </div>
+        </div>
 
 
 
