--- a/pages/artificial-intelligence.html
+++ b/pages/artificial-intelligence.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="../Styles/main.css">
+ <link rel="stylesheet" href="../Styles/main.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
@@ -83,45 +83,42 @@
         <div class="container-fluid    p-0">
 
             <div class="navbar navbar-expand-lg bg-white py-0   >
-
             
             <a href=" index.html" class="navbar-brand ml-lg-3 ">
 
-                <img src="../img/logo.a837e74955c0b8e4a8d6.png  " class="imgm pr-lg-10 d-lg-block logo" width="180px"
-                    alt="">
+                <img src="../img/logo.a837e74955c0b8e4a8d6.png  " class="imgm pr-lg-10 d-lg-block logo"
+                    width="180px" alt="">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
+                <div class="collapse navbar-collapse justify-content-between px-lg-3 " id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
-                        <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size ">About Us
-                        </a>
+                        <a href="./pages/about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
                         <div class="nav-item dropdown ">
-                            <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size"
+                            <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size "
                                 data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="#" class="dropdown-item ">Artificial
-                                    intelligence</a>
-                                <a href="feature.html" class="dropdown-item ">Our Features</a>
-                                <a href="team.html" class="dropdown-item ">Instructors</a>
-                                <a href="testimonial.html" class="dropdown-item ">Testimonial</a>
+                                <a href="detail.html" class="dropdown-item">Artificial intelligence</a>
+                                <a href="feature.html" class="dropdown-item">Our Features</a>
+                                <a href="team.html" class="dropdown-item">Instructors</a>
+                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                             </div>
                         </div>
-                        <a href="./success-story.html"
-                            class="nav-item nav-link a1  active navbar-font-size">Success Story </a>
-                        <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size">Contact
-                            Us </a>
+                        <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
+                        <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                     </div>
-                    <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
+                    <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
+                        Quote</button>
                 </div>
             </div>
         </div>
 
     </div>
+   
 
 
 
