--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,13 +96,13 @@
                 <div class="collapse navbar-collapse justify-content-between px-lg-3 " id="navbarCollapse">
                     <div class="navbar-nav mx-auto py-0">
                         <a href="../index.html" class="nav-item nav-link active a1 navbar-font-size "> Home</a>
-                        <a href="./pages/about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
+                        <a href="./about.html" class="nav-item active nav-link a1 navbar-font-size  ">About Us </a>
                         <div class="nav-item dropdown ">
                             <a href="#" class="nav-link dropdown-toggle a1 active  navbar-font-size "
                                 data-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
 
-                                <a href="detail.html" class="dropdown-item">Artificial intelligence</a>
+                                <a href="../pages/contact.html" class="dropdown-item">Artificial intelligence</a>
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
                                 <a href="team.html" class="dropdown-item">Instructors</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -111,7 +111,8 @@
                         <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
                         <a href="#" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                     </div>
-                    <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
+                    <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
+                        Quote</button>
                 </div>
             </div>
         </div>
