--- a/pages/success-story.html
+++ b/pages/success-story.html
@@ -112,7 +112,8 @@
                         <a href="./success-story.html" class="nav-item nav-link a1 navbar-font-size  active">Success Story </a>
                         <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                     </div>
-                    <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
+                    <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
+                        Quote</button>
                 </div>
             </div>
         </div>
@@ -333,6 +334,27 @@
         </div>
 
     </div>
+
+
+
+    <div class="CLIENT-TESTIMONIALS">
+        <div class="CLIENT">
+            <h3>CLIENT <span>TESTIMONIALS</span>
+            </h3>
+        </div>
+        <div class="ifarme-vedio">
+            <iframe width="1122" height="530" src="https://www.youtube.com/embed/wcxXvdOZ8X8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+    </div>
+
+
+
+
+
 
 
 
