--- a/pages/about.html
+++ b/pages/about.html
@@ -101,7 +101,7 @@
                                     data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu m-0">
 
-                                    <a href="detail.html" class="dropdown-item">Artificial intelligence</a>
+                                    <a href="./artificial-intelligence.html" class="dropdown-item">Artificial intelligence</a>
                                     <a href="feature.html" class="dropdown-item">Our Features</a>
                                     <a href="team.html" class="dropdown-item">Instructors</a>
                                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
@@ -110,7 +110,8 @@
                             <a href="./success-story.html" class="nav-item nav-link a1  active navbar-font-size ">Success Story </a>
                             <a href="./contact.html" class="nav-item nav-link a1 active navbar-font-size ">Contact Us </a>
                         </div>
-                        <a href="" class="btn btn-danger m bmarign  py-2 px-4 d-none d-lg-block">Get Quote </a>
+                        <button class=" bmarign  bmarign-1 py-2 px-4 d-none d-lg-block " type="submit">Get
+                            Quote</button>
                     </div>
                 </div>
             </div>
